7312 zfs checksum errors observed in a zpool full of NVMe SSDs 6908 Samsung SSD SM951-NVMe shows checksum errors Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Reviewed by: Rick McNeal <rick.mcneal@nexenta.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>